A LOT of changes

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Добро пожаловать</title>
-    <meta property="og:locale" content="ru_RU"/>
-    <meta property="vk:image" content="./src/preview.png">
-    <meta property="vk:description" content="Описание? Ну и что мне сюда написать?...">
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="vk:image" content="./src/preview.png" />
+    <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
     <link rel="image_src" href=".src/preview.png" />
     <meta property="og:image" content="./src/preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
@@ -61,6 +61,8 @@
         <span class="animatedtext-content animatedtext-second">тут нужно что-то написать про себя, так? Когда-нибудь я так и сделаю.</span>
       </h3>
       <hr class="hr" />
+    </div>
+    <div class="main-transparent">
       <h2 class="h2xl text-center"><span class="animatedtext-content animatedtext-second">какие технологии я использую?</span></h2>
     </div>
     <div class="card-deck">
@@ -104,10 +106,64 @@
       </div>
     </div>
     <div class="main">
+      <h2 class="h2xl text-center"><span class="animatedtext-content animatedtext-second">Что я учу/планирую выучить?</span></h2>
+
+      </div>
+      <div class="main-transparent">
+      <h3 class="h3 text-center">
+        <span class="animatedtext-content animatedtext-second">Возможно, когда-нибудь я выучу это...</span>
+      </h3>
+      </div>
+    </div>
+    <div class="progress-bar-striped progress-bar-animated">
+      <div class="card-deck">
+        <div class="row">
+          <div class="col-sm-4 d-inline-flex">
+            <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
+              <img class="card-img-bottom" src="./src/cppSharp.png" alt="Card image cap" />
+              <div class="card-body">
+                <h5 class="card-title">C++ / C#</h5>
+                <p class="card-text">Объекто-ориентированные языки программирования промежуточного уровня.</p>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wip" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">work in progress... &nbsp;</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 d-inline-flex">
+            <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
+              <img class="card-img-bottom" src="./src/bd.png" alt="Card image cap" />
+              <div class="card-body">
+                <h5 class="card-title">SQL</h5>
+                <p class="card-text">Декларативный язык программирования, применяемый для управления данными в реляционной базе данных.</p>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wip" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">work in progress... &nbsp;</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 d-inline-flex">
+            <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
+              <img class="card-img-bottom" src="./src/Python.png" alt="Card image cap" />
+              <div class="card-body">
+                <h5 class="card-title">Python</h5>
+                <p class="card-text">Python — высокоуровневый язык программирования общего назначения.</p>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wip" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">work in progress... &nbsp;</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="main-transparent">
       <p></p>
       <h2 class="h2xl text-center">⚒️Сайт всё ещё в разработке</h2>
+      </div>
+      <div class="main">
 
-      <hr class="hr" />
+
       <p></p>
       <h3 class="h3 text-center">
         Скоро здесь будет ещё больше интересного.<br />
