changed Python description :D

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               <img class="card-img-bottom" src="./src/Python.png" alt="Card image cap" />
               <div class="card-body">
                 <h5 class="card-title">Python</h5>
-                <p class="card-text">Python — высокоуровневый язык программирования общего назначения.</p>
+                <p class="card-text">Высокоуровневый язык программирования общего назначения, написанный на C..</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wip" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">work in progress... &nbsp;</div>
                 </div>
