--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Добро пожаловать</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <meta property="og:locale" content="ru_RU" />
     <meta property="vk:image" content="./src/preview.png" />
     <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
@@ -13,9 +14,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-viewport-checker/1.8.8/jquery.viewportchecker.min.js" integrity="sha512-FRX6MYITclzDyyMmSQLgZoZTfE+GLzAQpjs15adVZMY6AqhsrBLx8UZwp4FoqrrRFWY9TiaPwja7EY5fk309vw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link href="custom.css" rel="stylesheet" />
   </head>
 
@@ -81,13 +82,13 @@
         </div>
         <div class="col-sm-4 d-inline-flex">
           <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-            <img class="card-img-mid" src="./src/CSS.png" alt="Card image cap" />
+            <img class="card-img-bottom" src="./src/CSS.png" alt="Card image cap" />
             <div class="card-body">
               <h5 class="card-title">CSS</h5>
               <p class="card-text">Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
               <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%">40% &nbsp;</div>
-              </div>
+              </div> 
             </div>
           </div>
         </div>
@@ -99,14 +100,14 @@
               <p class="card-text">Язык гипертекстовой разметки страницы. Он используется для того, чтобы дать браузеру понять, как нужно отображать загруженный сайт.</p>
               <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 45%">45% &nbsp;</div>
-              </div>
+              </div> 
             </div>
           </div>
         </div>
       </div>
     </div>
     <div class="main">
-      <h2 class="h2xl text-center"><span class="animatedtext-content animatedtext-second">Что я учу/планирую выучить?</span></h2>
+      <h2 class="h2xl text-center"><span class="animatedtext-content">Что я учу/планирую выучить?</span></h2>
 
       </div>
       <div class="main-transparent">
@@ -147,7 +148,7 @@
               <img class="card-img-bottom" src="./src/Python.png" alt="Card image cap" />
               <div class="card-body">
                 <h5 class="card-title">Python</h5>
-                <p class="card-text">Высокоуровневый язык программирования общего назначения, написанный на C..</p>
+                <p class="card-text">Высокоуровневый язык программирования общего назначения, написанный на C.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wip" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">work in progress... &nbsp;</div>
                 </div>
@@ -156,7 +157,8 @@
           </div>
         </div>
       </div>
-    </div>
+
+    </span>
     <div class="main-transparent">
       <p></p>
       <h2 class="h2xl text-center">⚒️Сайт всё ещё в разработке</h2>
@@ -202,4 +204,16 @@
       document.body.classList.remove("color" + slideIndexm1);
     }
   </script>
+  <script>
+jQuery(document).ready(function($) {
+  $('.card').viewportChecker({
+      classToAdd: 'visible',
+      classToRemove: '',
+      invertBottomOffset: true,
+      repeat: false,
+      callbackFunction: function(elem, action){},
+      scrollHorizontal: false
+  });
+});
+    </script>
 </html>
