--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Добро пожаловать</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <meta property="og:locale" content="ru_RU" />
-    <meta property="vk:image" content="./src/preview.png" />
+    <meta property="vk:image" content="https://kotikov.pages.dev/src/preview.png" />
     <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
     <link rel="image_src" href=".src/preview.png" />
-    <meta property="og:image" content="./src/preview.png" />
+    <meta property="og:image" content="https://kotikov.pages.dev/src/preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
-    <meta name="twitter:image" content="./src/preview.png" />
+    <meta name="twitter:image" content="https://kotikov.pages.dev/src/preview.png" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
@@ -88,7 +88,7 @@
               <p class="card-text">Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
               <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%">40% &nbsp;</div>
-              </div> 
+              </div>
             </div>
           </div>
         </div>
@@ -100,7 +100,7 @@
               <p class="card-text">Язык гипертекстовой разметки страницы. Он используется для того, чтобы дать браузеру понять, как нужно отображать загруженный сайт.</p>
               <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 45%">45% &nbsp;</div>
-              </div> 
+              </div>
             </div>
           </div>
         </div>
@@ -108,14 +108,13 @@
     </div>
     <div class="main">
       <h2 class="h2xl text-center"><span class="animatedtext-content">Что я учу/планирую выучить?</span></h2>
-
-      </div>
-      <div class="main-transparent">
+    </div>
+    <div class="main-transparent">
       <h3 class="h3 text-center">
         <span class="animatedtext-content animatedtext-second">Возможно, когда-нибудь я выучу это...</span>
       </h3>
-      </div>
     </div>
+
     <div class="progress-bar-striped progress-bar-animated">
       <div class="card-deck">
         <div class="row">
@@ -158,63 +157,61 @@
         </div>
       </div>
 
-    </span>
-    <div class="main-transparent">
-      <p></p>
-      <h2 class="h2xl text-center">⚒️Сайт всё ещё в разработке</h2>
+      <div class="main-transparent">
+        <p></p>
+        <h2 class="h2xl text-center">⚒️Сайт всё ещё в разработке</h2>
       </div>
       <div class="main">
+        <p></p>
+        <h3 class="h3 text-center">
+          Скоро здесь будет ещё больше интересного.<br />
+          А пока посмотрите на моего котика:)
+        </h3>
 
+        <img src="./src/cat.jpg" class="rounded mx-auto d-block" alt="catpic" width="90%" />
+        <p></p>
+        <hr class="hr" />
+      </div>
 
-      <p></p>
-      <h3 class="h3 text-center">
-        Скоро здесь будет ещё больше интересного.<br />
-        А пока посмотрите на моего котика:)
-      </h3>
+      <div class="main padding">
+        <h2 class="h2x text-center">Arsenij Kotikov©, 2022</h2>
+      </div>
 
-      <img src="./src/cat.jpg" class="rounded mx-auto d-block" alt="catpic" width="90%" />
-      <p></p>
-      <hr class="hr" />
-    </div>
+      <script>
+        let slideIndex = 0;
+        showSlides();
 
-    <div class="main padding">
-      <h2 class="h2x text-center">Arsenij Kotikov©, 2022</h2>
+        function showSlides() {
+          let i;
+          let slides = document.getElementsByClassName("mySlides");
+
+          for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+          }
+          slideIndex++;
+          if (slideIndex > slides.length) {
+            slideIndex = 1;
+          }
+          document.body.classList.remove("color3");
+          slides[slideIndex - 1].style.display = "block";
+          document.body.classList.add("color" + slideIndex);
+          setTimeout(showSlides, 4000); // Change image every 2 seconds
+          let slideIndexm1 = slideIndex - 1;
+          document.body.classList.remove("color" + slideIndexm1);
+        }
+      </script>
+      <script>
+        jQuery(document).ready(function ($) {
+          $(".card").viewportChecker({
+            classToAdd: "visible",
+            classToRemove: "",
+            invertBottomOffset: true,
+            repeat: false,
+            callbackFunction: function (elem, action) {},
+            scrollHorizontal: false,
+          });
+        });
+      </script>
     </div>
   </body>
-  <script>
-    let slideIndex = 0;
-    showSlides();
-
-    function showSlides() {
-      let i;
-      let slides = document.getElementsByClassName("mySlides");
-
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      slideIndex++;
-      if (slideIndex > slides.length) {
-        slideIndex = 1;
-      }
-      document.body.classList.remove("color3");
-      slides[slideIndex - 1].style.display = "block";
-      document.body.classList.add("color" + slideIndex);
-      setTimeout(showSlides, 4000); // Change image every 2 seconds
-      let slideIndexm1 = slideIndex - 1;
-      document.body.classList.remove("color" + slideIndexm1);
-    }
-  </script>
-  <script>
-jQuery(document).ready(function($) {
-  $('.card').viewportChecker({
-      classToAdd: 'visible',
-      classToRemove: '',
-      invertBottomOffset: true,
-      repeat: false,
-      callbackFunction: function(elem, action){},
-      scrollHorizontal: false
-  });
-});
-    </script>
 </html>
-
