--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +7,7 @@
     <meta property="og:locale" content="ru_RU" />
     <meta property="vk:image" content="https://kotikov.pages.dev/src/preview.png" />
     <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
-    <link rel="image_src" href=".src/preview.png" />
+    <link rel="image_src" href="https://kotikov.pages.dev/src/preview.png" />
     <meta property="og:image" content="https://kotikov.pages.dev/src/preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta name="twitter:image" content="https://kotikov.pages.dev/src/preview.png" />
