--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="image_src" href="https://kotikov.pages.dev/src/preview.png" />
     <meta property="og:image" content="https://kotikov.pages.dev/src/preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
-    <meta name="twitter:image" content="https://kotikov.pages.dev/src/preview.png" />
+    <meta name="twitter:card" content="https://kotikov.pages.dev/src/preview.png" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
