--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:image" content="https://kotikov.pages.dev/src/preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta name="twitter:card" content="https://kotikov.pages.dev/src/preview.png" />
+    <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:creator" content="@arsenij_kotikov" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
