--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Добро пожаловать</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <meta property="og:locale" content="ru_RU" />
+    <meta property="og:image" content="https://kotikov.pages.dev/src/preview.png" />
     <meta property="vk:image" content="https://kotikov.pages.dev/src/preview.png" />
+    <meta name="twitter:card" content="https://kotikov.pages.dev/src/preview.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:description" content="Описание? Ну и что мне сюда написать?..." />
+    <meta name="twitter:creator" content="@arsenij_kotikov" />
     <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
     <link rel="image_src" href="https://kotikov.pages.dev/src/preview.png" />
-    <meta property="og:image" content="https://kotikov.pages.dev/src/preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
-    <meta name="twitter:card" content="https://kotikov.pages.dev/src/preview.png" />
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:creator" content="@arsenij_kotikov" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
