--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:image" content="http://kotikov.pages.dev/src/preview.png" />
-    <meta property="vk:image" content="http://kotikov.pages.dev/src/preview.png?" />
+    <meta property="vk:image" content="http://kotikov.pages.dev/src/preview.png" />
     <meta name="twitter:card" content="http://kotikov.pages.dev/src/preview.png" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:description" content="Описание? Ну и что мне сюда написать?..." />
