--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <meta property="og:locale" content="ru" />
-    <meta property="og:image" content="https://kotikov.pages.dev/src/preview.png" />
+    <meta property="og:locale" content="ru_RU" />
     <meta property="og:image:secure_url" content="https://kotikov.pages.dev/src/preview.png" />
     <meta name="twitter:card" content="https://kotikov.pages.dev/src/preview.png" />
     <meta name="twitter:card" content="summary" />
