--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <meta property="og:locale" content="ru_RU" />
-    <meta property="og:image:type" content="image/png" />
     <meta property="og:image:secure_url" content="https://kotikov.pages.dev/src/preview.png" />
     <meta name="twitter:card" content="https://kotikov.pages.dev/src/preview.png" />
     <meta name="twitter:card" content="summary" />
@@ -73,7 +72,7 @@
       <div class="row">
         <div class="col-sm-4 d-inline-flex">
           <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-            <img class="card-img-top" src="./src/JS.png" alt="Card image cap" />
+            <img class="card-img-top" src="./src/JS.png" alt="Javascript" />
             <div class="card-body">
               <h5 class="card-title">Javascript</h5>
               <p class="card-text">JavaScript это язык, который позволяет вам применять сложные вещи на web странице.</p>
@@ -85,7 +84,7 @@
         </div>
         <div class="col-sm-4 d-inline-flex">
           <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-            <img class="card-img-bottom" src="./src/CSS.png" alt="Card image cap" />
+            <img class="card-img-bottom" src="./src/CSS.png" alt="Cascading Style Sheets" />
             <div class="card-body">
               <h5 class="card-title">CSS</h5>
               <p class="card-text">Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
@@ -97,7 +96,7 @@
         </div>
         <div class="col-sm-4 d-inline-flex">
           <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-            <img class="card-img-bottom" src="./src/HTML.png" alt="Card image cap" />
+            <img class="card-img-bottom" src="./src/HTML.png" alt="HyperText Markup Language" />
             <div class="card-body">
               <h5 class="card-title">HTML</h5>
               <p class="card-text">Язык гипертекстовой разметки страницы. Он используется для того, чтобы дать браузеру понять, как нужно отображать загруженный сайт.</p>
@@ -123,7 +122,7 @@
         <div class="row">
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/cppSharp.png" alt="Card image cap" />
+              <img class="card-img-bottom" src="./src/cppSharp.png" alt="C++ / C#" />
               <div class="card-body">
                 <h5 class="card-title">C++ / C#</h5>
                 <p class="card-text">Объекто-ориентированные языки программирования промежуточного уровня.</p>
@@ -135,7 +134,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/bd.png" alt="Card image cap" />
+              <img class="card-img-bottom" src="./src/bd.png" alt="Structured Query Language" />
               <div class="card-body">
                 <h5 class="card-title">SQL</h5>
                 <p class="card-text">Декларативный язык программирования, применяемый для управления данными в реляционной базе данных.</p>
@@ -147,7 +146,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/Python.png" alt="Card image cap" />
+              <img class="card-img-bottom" src="./src/Python.png" alt="Python" />
               <div class="card-body">
                 <h5 class="card-title">Python</h5>
                 <p class="card-text">Высокоуровневый язык программирования общего назначения, написанный на C.</p>
@@ -171,7 +170,7 @@
           А пока посмотрите на моего котика:)
         </h3>
 
-        <img src="./src/cat.jpg" class="rounded mx-auto d-block" alt="catpic" width="90%" />
+        <img src="./src/cat.jpg" class="rounded mx-auto d-block" alt="котек" width="90%" />
         <p></p>
         <hr class="hr" />
       </div>
