--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <img src="./src/web.png" class="dsc-img rounded float-left" alt="..." />
           <h2 class="h2xld"><span class="animatedtext-content">Web разработка</span></h2>
           <h3 class="h3d">
-            <span class="animatedtext-content animatedtext-second">WEB-разработка — процедура создания WEB-приложения или WEB-сайта.Основными этапами этого процесса являются такие мероприятия, как WEB-дизайн, вёрстка страниц сайта, программирование на стороне сервера и клиента, а также работы по конфигурированию сервера.</span>
+            <span class="animatedtext-content animatedtext-second">WEB-разработка — процедура создания WEB-приложения или WEB-сайта. Основными этапами этого процесса являются такие мероприятия, как WEB-дизайн, вёрстка страниц сайта, программирование на стороне сервера и клиента, а также работы по конфигурированию сервера.</span>
           </h3>
         </div>
         <div class="dsc">
@@ -186,12 +186,10 @@
           <h3 class="h3d"><span class="animatedtext-content animatedtext-second">Лол, здесь нужно что-то объяснять? Котики классные.</span></h3>
         </div>
         <hr class="hr" />
-        <h3 class="h3 text-center">
-          Скоро здесь будет ещё больше интересного.<br />
-          А пока посмотрите на моего котика:)
-        </h3>
+        <h2 class="h2xl text-center"><span class="animatedtext-content">🔥Скоро здесь будет ещё больше интересного.</span></h2>
+        <h3 class="h3 text-center">А пока посмотрите на моего котика:)</h3>
 
-        <img src="./src/cat.jpg" class="rounded mx-auto d-block" alt="котек" width="90%" />
+        <img src="./src/cat.jpg" class="rounded mx-auto d-block" alt="котек" width="700rem" style="max-width: 80%" />
         <p></p>
         <hr class="hr" />
       </div>
