--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <link href="custom.css" rel="stylesheet" />
     <title>Добро пожаловать</title>
   </head>
-
   <body class="bd">
     <img src="./src/mobile.png" style="display: none" />
     <img src="./src/mobile_red.png" style="display: none" />
@@ -36,7 +35,6 @@
         ></span>
       </div>
     </nav>
-
     <div class="jumbotron">
       <div class="slideshow-container">
         <div class="mySlides fade">
@@ -158,47 +156,81 @@
           </div>
         </div>
       </div>
-      <div class="main-transparent">
-        <p></p>
-        <h2 class="h2xl text-center"><span class="animatedtext-content">Чем я интересуюсь❓</span></h2>
-        <p></p>
+    </div>
+    <div class="main-transparent">
+      <p></p>
+      <h2 class="h2xl text-center"><span class="animatedtext-content">Чем я интересуюсь❓</span></h2>
+      <p></p>
+    </div>
+    <div class="main">
+      <div class="dsc">
+        <img src="./src/eth.png" class="dsc-img rounded float-left" alt="..." />
+        <h2 class="h2xld"><span class="animatedtext-content">Блокчейн</span></h2>
+        <h3 class="h3d">
+          <span class="animatedtext-content animatedtext-second"
+            >Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее широко обсуждают не только в мире финансов. Блокчейн уже пробуют использовать для хранения и обработки персональных данных и идентификации, в маркетинге и компьютерных играх.</span
+          >
+        </h3>
       </div>
-      <div class="main">
-        <div class="dsc">
-          <img src="./src/eth.png" class="dsc-img rounded float-left" alt="..." />
-          <h2 class="h2xld"><span class="animatedtext-content">Блокчейн</span></h2>
-          <h3 class="h3d">
-            <span class="animatedtext-content animatedtext-second"
-              >Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее широко обсуждают не только в мире финансов. Блокчейн уже пробуют использовать для хранения и обработки персональных данных и идентификации, в маркетинге и компьютерных играх.</span
-            >
-          </h3>
-        </div>
-        <div class="dsc">
-          <img src="./src/web.png" class="dsc-img rounded float-left" alt="..." />
-          <h2 class="h2xld"><span class="animatedtext-content">Web разработка</span></h2>
-          <h3 class="h3d">
-            <span class="animatedtext-content animatedtext-second">WEB-разработка — процедура создания WEB-приложения или WEB-сайта. Основными этапами этого процесса являются такие мероприятия, как WEB-дизайн, вёрстка страниц сайта, программирование на стороне сервера и клиента, а также работы по конфигурированию сервера.</span>
-          </h3>
-        </div>
-        <div class="dsc">
-          <img src="./src/meow.png" class="dsc-img rounded float-left" alt="..." />
-          <h2 class="h2xld"><span class="animatedtext-content">Котики</span></h2>
-          <h3 class="h3d"><span class="animatedtext-content animatedtext-second">Лол, здесь нужно что-то объяснять? Котики классные.</span></h3>
-        </div>
-        <hr class="hr" />
-        <h2 class="h2xl text-center"><span class="animatedtext-content">🔥Скоро здесь будет ещё больше интересного.</span></h2>
-        <h3 class="h3 text-center">А пока посмотрите на моего котика:)</h3>
-
-        <img src="./src/cat.jpg" class="rounded mx-auto d-block" alt="котек" width="700rem" style="max-width: 80%" />
-        <p></p>
-        <hr class="hr" />
+      <div class="dsc">
+        <img src="./src/web.png" class="dsc-img rounded float-left" alt="..." />
+        <h2 class="h2xld"><span class="animatedtext-content">Web разработка</span></h2>
+        <h3 class="h3d">
+          <span class="animatedtext-content animatedtext-second">WEB-разработка — процедура создания WEB-приложения или WEB-сайта. Основными этапами этого процесса являются такие мероприятия, как WEB-дизайн, вёрстка страниц сайта, программирование на стороне сервера и клиента, а также работы по конфигурированию сервера.</span>
+        </h3>
       </div>
-
-      <div class="main padding">
-        <h2 class="h2x text-center">Arsenij Kotikov©, 2022</h2>
+      <div class="dsc">
+        <img src="./src/meow.png" class="dsc-img rounded float-left" alt="..." />
+        <h2 class="h2xld"><span class="animatedtext-content">Котики</span></h2>
+        <h3 class="h3d"><span class="animatedtext-content animatedtext-second">Лол, здесь нужно что-то объяснять? Котики классные.</span></h3>
       </div>
     </div>
+    <div class="main-transparent">
+      <p></p>
+      <!-- i dont want to explain that...-->
+      <p></p>
+    </div>
+    <div class="main-ref">
+      <div class="progress-bar-striped progress-bar-animated">
+        <div class="card-deck">
+          <div class="row">
+            <div class="col-sm-4 d-inline-flex">
+              <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
+                <img class="card-img-top" src="./src/like.png" alt="Javascript" />
+                <div class="card-body">
+                  <h5 class="card-title">Понравился сайт? :D</h5>
+                  <p class="card-text">JavaScript это язык, который позволяет вам применять сложные вещи на web странице.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-8 d-inline-flex">
+              <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
+                <img class="card-img-bottom" src="./src/gh.png" alt="Cascading Style Sheets" />
+                <div class="card-body">
+                  <h5 class="card-title">CSS</h5>
+                  <p class="card-text">Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="main-transparent">
+      <p></p>
+      <h2 class="h2xl text-center"><span class="animatedtext-content">🔥Скоро здесь будет ещё больше интересного.</span></h2>
+      <p></p>
+    </div>
+    <div class="main">
+      <h3 class="h3 text-center">А пока посмотрите на моего котика:)</h3>
 
+      <img src="./src/cat.jpg" class="rounded mx-auto d-block" alt="котек" width="700rem" style="max-width: 80%" />
+      <p></p>
+      <hr class="hr" />
+    </div>
+    <div class="main padding">
+      <h2 class="h2x text-center">Arsenij Kotikov©, 2022</h2>
+    </div>
     <script>
       let slideIndex = 0;
       showSlides();
