description & link fix

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <img src="./src/mobile_orange.png" style="display: none" />
     <nav class="navbar">
       <div class="mx-auto my-2 order-1 order-md-1 position-relative">
-        <span class="animatedtext-content"
-          ><a class="bx bxl-youtube btn" href="https://www.youtube.com/channel/UCOYprFCDyhHdhbtfzZNqYFQ"> </a>
+        <span class="animatedtext-content">
+          <a class="bx bxl-youtube btn" href="https://www.youtube.com/channel/UCOYprFCDyhHdhbtfzZNqYFQ"> </a>
           <a class="bx bxl-vk btn" href="https://vk.com/arsenij_kotikov"> </a>
           <a class="bx bxl-github btn" href="https://github.com/kotru21"> </a>
-          <a class="bx bxl-twitter btn" href="https://twitter.com/arsenij_kotikov"> </a
-        ></span>
+          <a class="bx bxl-twitter btn" href="https://twitter.com/arsenij_kotikov"> </a>
+        </span>
       </div>
     </nav>
     <div class="jumbotron">
@@ -199,17 +199,19 @@
                 <img class="card-img-top" src="./src/like.png" alt="Javascript" />
                 <div class="card-body">
                   <h5 class="card-title">Понравился сайт? :D</h5>
-                  <p class="card-text">JavaScript это язык, который позволяет вам применять сложные вещи на web странице.</p>
+                  <p class="card-text">У него открытый исходный код, который размещён на GitHub.</p>
                 </div>
               </div>
             </div>
             <div class="col-sm-8 d-inline-flex">
               <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-                <img class="card-img-bottom" src="./src/gh.png" alt="Cascading Style Sheets" />
-                <div class="card-body">
-                  <h5 class="card-title">CSS</h5>
-                  <p class="card-text">Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
-                </div>
+                <a href="https://github.com/kotru21/kotikov" style="text-decoration: none">
+                  <img class="card-img-bottom" src="./src/gh.png" alt="Cascading Style Sheets" />
+                  <div class="card-body">
+                    <h5 class="card-title">Репозиторий Github</h5>
+                    <p class="card-text">Жмякни сюда. Все исходники находятся здесь :)</p>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
