--- a/index.html
+++ b/index.html
@@ -167,10 +167,11 @@
         <img src="./src/eth.png" class="dsc-img rounded float-left" alt="..." />
         <h2 class="h2xld"><span class="animatedtext-content">Блокчейн</span></h2>
         <h3 class="h3d">
-          <span class="animatedtext-content animatedtext-second"
-            >Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее широко обсуждают не только в мире финансов. Блокчейн уже пробуют использовать для хранения и обработки персональных данных и идентификации, в маркетинге и компьютерных играх.</span
-          >
+          <span class="animatedtext-content animatedtext-second">
+            Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее широко обсуждают не только в мире финансов. Блокчейн уже пробуют использовать для хранения и обработки персональных данных и идентификации, в маркетинге и компьютерных играх.
+          </span>
         </h3>
+        <hr class="hr" style="margin-top: 2rem; margin-left: 1rem; margin-right: 1rem" />
       </div>
       <div class="dsc">
         <img src="./src/web.png" class="dsc-img rounded float-left" alt="..." />
@@ -178,6 +179,7 @@
         <h3 class="h3d">
           <span class="animatedtext-content animatedtext-second">WEB-разработка — процедура создания WEB-приложения или WEB-сайта. Основными этапами этого процесса являются такие мероприятия, как WEB-дизайн, вёрстка страниц сайта, программирование на стороне сервера и клиента, а также работы по конфигурированию сервера.</span>
         </h3>
+        <hr class="hr" style="margin-top: 2rem; margin-left: 1rem; margin-right: 1rem" />
       </div>
       <div class="dsc">
         <img src="./src/meow.png" class="dsc-img rounded float-left" alt="..." />
