--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее широко обсуждают не только в мире финансов. Блокчейн уже пробуют использовать для хранения и обработки персональных данных и идентификации, в маркетинге и компьютерных играх.
           </span>
         </h3>
-        <hr class="hr" style="margin-top: 2rem; margin-left: 1rem; margin-right: 1rem" />
+        <hr class="hr" style="margin-top: 2rem; margin-left: 1rem; margin-right: 1rem; margin-bottom: -0.5rem" />
       </div>
       <div class="dsc">
         <img src="./src/web.png" class="dsc-img rounded float-left" alt="..." />
@@ -179,7 +179,7 @@
         <h3 class="h3d">
           <span class="animatedtext-content animatedtext-second">WEB-разработка — процедура создания WEB-приложения или WEB-сайта. Основными этапами этого процесса являются такие мероприятия, как WEB-дизайн, вёрстка страниц сайта, программирование на стороне сервера и клиента, а также работы по конфигурированию сервера.</span>
         </h3>
-        <hr class="hr" style="margin-top: 2rem; margin-left: 1rem; margin-right: 1rem" />
+        <hr class="hr" style="margin-top: 2rem; margin-left: 1rem; margin-right: 1rem; margin-bottom: -0.5rem" />
       </div>
       <div class="dsc">
         <img src="./src/meow.png" class="dsc-img rounded float-left" alt="..." />
