new preview image

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <meta property="og:locale" content="ru_RU" />
-    <meta property="og:image:secure_url" content="https://kotikov.pages.dev/src/preview.png" />
-    <meta name="twitter:card" content="https://kotikov.pages.dev/src/preview.png" />
+    <meta property="og:image:secure_url" content="https://kotikov.pages.dev/src/web_preview.png" />
+    <meta name="twitter:card" content="https://kotikov.pages.dev/src/web_preview.png" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta name="twitter:creator" content="@arsenij_kotikov" />
     <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
-    <link rel="image_src" href="https://kotikov.pages.dev/src/preview.png" />
+    <meta property="vk:image" content="https://kotikov.pages.dev/src/web_preview.png" />
+    <link rel="image_src" href="https://kotikov.pages.dev/src/web_preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
