--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta name="twitter:creator" content="@arsenij_kotikov" />
     <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
-    <meta property="vk:image" content="https://kotikov.pages.dev/src/web_preview.png" />
+    <meta property="vk:image" content="https://kotikov.pages.dev/src/web_preview_VK.png" />
     <link rel="image_src" href="https://kotikov.pages.dev/src/web_preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta charset="utf-8" />
