--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <meta property="og:locale" content="ru_RU" />
+    <meta property="og:site_name" content="Арсений Котиков
     <meta property="og:image:secure_url" content="https://kotikov.pages.dev/src/web_preview.png" />
+    <meta property="og:image" content="https://kotikov.pages.dev/src/web_preview.png" />                                                                                            
     <meta name="twitter:card" content="https://kotikov.pages.dev/src/web_preview.png" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:description" content="Описание? Ну и что мне сюда написать?..." />
