--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:image:secure_url" content="https://kotikov.pages.dev/src/web_preview.png" />
     <meta property="og:image" content="https://kotikov.pages.dev/src/web_preview.png" />                                                                                            
     <meta name="twitter:card" content="https://kotikov.pages.dev/src/web_preview.png" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta name="twitter:creator" content="@arsenij_kotikov" />
     <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
