--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
     <div class="main padding">
       <h2 class="h2x text-center">Arsenij Kotikov©, 2022</h2>
     </div>
+<!-- The above code is a slideshow that changes the background color of the page every 4 seconds. -->
     <script>
       let slideIndex = 0;
       showSlides();
@@ -257,6 +258,7 @@
         document.body.classList.remove("color" + slideIndexm1);
       }
     </script>
+<!-- Adding a .visible class to the element when it is in the viewport. -->
     <script>
       jQuery(document).ready(function ($) {
         $(".card").viewportChecker({
