little alt changes

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <div class="row">
             <div class="col-sm-4 d-inline-flex">
               <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-                <img class="card-img-top" src="./src/like.png" alt="Javascript" />
+                <img class="card-img-top" src="./src/like.png" alt="просто пикча" />
                 <div class="card-body">
                   <h5 class="card-title">Понравился сайт? :D</h5>
                   <p class="card-text">У него открытый исходный код, который размещён на GitHub.</p>
@@ -208,7 +208,7 @@
             <div class="col-sm-8 d-inline-flex">
               <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
                 <a href="https://github.com/kotru21/kotikov" style="text-decoration: none">
-                  <img class="card-img-bottom" src="./src/gh.png" alt="Cascading Style Sheets" />
+                  <img class="card-img-bottom" src="./src/gh.png" alt="GitHub preview pic" />
                   <div class="card-body">
                     <h5 class="card-title">Репозиторий Github</h5>
                     <p class="card-text">Жмякни сюда. Все исходники находятся здесь :)</p>
