--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="main">
       <p class="lead"></p>
       <h1 class="h1 text-center"><span class="animatedtext-content">Привет!</span></h1>
-      <h3 class="h3 text-center">
+      <h3 class="h3 text-center" style="margin-left: 1rem; margin-right: 1rem;">
         <span class="animatedtext-content animatedtext-second">тут нужно что-то написать про себя, так? Когда-нибудь я так и сделаю.</span>
       </h3>
       <hr class="hr" />
