--- a/index.html
+++ b/index.html
@@ -225,14 +225,15 @@
       <h2 class="h2xl text-center"><span class="animatedtext-content">🔥Скоро здесь будет ещё больше интересного.</span></h2>
       <p></p>
     </div>
-    <div class="main">
+    <div class="main" style="margin-bottom: -1rem;">
       <h3 class="h3 text-center">А пока посмотрите на моего котика:)</h3>
       <img src="./src/cat.jpg" class="rounded mx-auto d-block" alt="котек" width="700rem" style="max-width: 80%" />
       <p></p>
       <hr class="hr" />
     </div>
     <div class="main padding">
-      <h2 class="h2x text-center">Arsenij Kotikov©, 2022</h2>
+      <h2 class="h2x text-center" style="color: #6255da;"><a href="#" class="rgbtext-blue">Arsenij Kotikov©</a>, 2022 </h2>
+      <h2 class="h2x text-center" style="color:#dab055"> Спасибо, <a class="rgbtext" href="https://www.cloudflare.com/">Сloudflare</a></h2>
     </div>
 <!-- The above code is a slideshow that changes the background color of the page every 4 seconds. -->
     <script>
