--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
     </div>
-    <div class="main">
+    <div class="main linear-bg">
       <p class="lead"></p>
       <h1 class="h1 text-center"><span class="animatedtext-content">Привет!</span></h1>
       <h3 class="h3 text-center" style="margin-left: 1rem; margin-right: 1rem;">
